# miniGUI

./: .gitignore  CMakeLists.txt  TODO.md
examples/basic-example/: main.cpp
examples/multilayer-example/: main.cpp
include/: canvas.hpp  inputState.hpp  layer.hpp  miniGUI.hpp  vector.hpp  window.hpp
include/elements/: imageElement.hpp  textElement.hpp
include/widgets/: imageWidget.hpp  textWidget.hpp  widget.hpp
include/widgets/buttons/: imageButtonWidget.hpp  textButtonWidget.hpp
include/widgets/shapes/: rectangleShapeWidget.hpp  shapeWidget.hpp
src/: canvas.cpp  layer.cpp  main.cpp  window.cpp
src/canvas/: canvas.cpp  canvas.h  canvas.hpp
src/elements/: element.cpp  element.hpp  imageElement.cpp  textElement.cpp
src/elements/image/: imageElement.hpp
src/elements/text/: textElement.hpp
src/image/: image.cpp  image.hpp  imageElement.cpp  imageElement.hpp
src/include/: miniGUI.hpp
src/inputState/: inputState.hpp
src/text/: text.cpp  text.hpp  textElement.cpp  textElement.hpp
src/vector/: vector.h  vector.hpp
src/widgets/: imageWidget.cpp  textWidget.cpp  widget.cpp  widget.hpp
src/widgets/buttons/: buttonWidget.cpp  buttonWidget.hpp  imageButtonWidget.cpp  imageButtonWidget.hpp  textButtonWidget.cpp  textButtonWidget.hpp
src/widgets/buttons/imageButtonWidget/: imageButtonWidget.hpp
src/widgets/buttons/textButtonWidget/: textButtonWidget.cpp  textButtonWidget.hpp
src/widgets/shapes/: rectangleShapeWidget.cpp  shape.cpp  shape.hpp
src/widgets/shapes/rectangle/: rectangle.cpp  rectangle.hpp
src/widgets/text/: textWidget.cpp  textWidget.hpp
src/window/: window.cpp  window.h  window.hpp
